Tagalog Basic Words And common phrase with sounds

--- a/client-side/src/components/Dialects/Ilocano/Learn Ilocano/Ilocano.css
+++ b/client-side/src/components/Dialects/Ilocano/Learn Ilocano/Ilocano.css
@@ -64,7 +64,7 @@
 }
 
 .ilocano-flashcard-back {
-    background-color: #007bff;
+    background-color: #211C84;
     color: white;
     transform: rotateY(180deg);
 }
