--- a/client-side/src/components/Dialects/zCSS/learn.css
+++ b/client-side/src/components/Dialects/zCSS/learn.css
@@ -17,7 +17,7 @@
 /* Styling for the tagalog words and flashcards */
 .flashcard {
     width: 100%;
-    height: 250px;
+    height: 12rem;
     position: relative;
     perspective: 1000px;
     border-radius: 12px;
@@ -55,7 +55,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    padding: 15px;
+    padding: 1rem;
     border-radius: 15px;
 }
 
